--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">BleMakeFriends</string>
+    <string name="facebook_app_id">965983720975229</string>
+    <string name="fb_login_protocol_scheme">fb965983720975229</string>
+    <string name="facebook_client_token">bb1f7a1c0e41fca3fc3728aa164e3abe</string>
 </resources>
